rails-app-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rails-app-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: rails-app
  template:
    metadata:
      labels:
        app: rails-app
    spec:
      containers:
        - name: rails-app-container
          image: your-rails-app-image:latest
          ports:
            - containerPort: 3000
