rails-app-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: rails-app-service
spec:
  selector:
    app: rails-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
