rails-app-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: rails-app-ingress
spec:
  rules:
    - host: your-hostname
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: rails-app-service
                port:
                  number: 3000
